--- a/POS/Areas/Setting/Views/Department/Index.cshtml
+++ b/POS/Areas/Setting/Views/Department/Index.cshtml
@@ -2,29 +2,19 @@
 
 <div class="container">
     <form method="post" id="departmentForm" asp-action="Index">
-        <input asp-for="DepartmentId" class="form-control" value="@Model.DepartmentId" type="hidden" id="ModelId" />
+        <input asp-for="DepartmentId" class="form-control" value="@Model.DepartmentId" type="hidden" id="InputId" />
         <div class="border p-3 mt-4">
             <div class="row pb-2">
                 <h2 class="text-primary">總公司 - 部門資料</h2>
                 <hr />
             </div>
             <div class="d-flex flex-wrap mb-3">
-                <button id="addButton" class="btn btn-secondary border m-1 flex-grow-1">新增</button>
-
-                @if (Model.DepartmentId == 0 || Model.DepartmentId == null)
-                {
-                    <button id="editButton" class="btn btn-secondary border m-1 flex-grow-1" disabled>修改</button>
-                    <button id="deleteButton" class="btn btn-secondary border m-1 flex-grow-1" disabled>刪除</button>
-                }
-                else
-                {
-                    <button id="editButton" class="btn btn-secondary border m-1 flex-grow-1">修改</button>
-                    <button id="deleteButton" class="btn btn-secondary border m-1 flex-grow-1">刪除</button>
-                }
-
-                <button id="cancelButton" class="btn btn-secondary border m-1 flex-grow-1" disabled>取消</button>
-                <button id="searchButton" class="btn btn-secondary border m-1 flex-grow-1">查詢</button>
-                <button id="printButton" class="btn btn-secondary border m-1 flex-grow-1">列印</button>
+                <button type="button" id="createButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="add()">新增</button>
+                <button type="button" id="editButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="edit()" @(Model.DepartmentId) == 0 ? "disabled" : "")>修改</button>
+                <button id="deleteButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="deleteClick(@Model.DepartmentId)" @(Model.DepartmentId == 0 ? "disabled" : "")>刪除</button>
+                <button type="button" id="cancelButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="cancel()" disabled>取消</button>
+                <button type="button" id="searchButton" class="btn btn-secondary border m-1 flex-grow-1">查詢</button>
+                <button type="button" id="printButton" class="btn btn-secondary border m-1 flex-grow-1">列印</button>
                 <button type="submit" class="btn btn-primary m-1 flex-grow-1" id="submitButton" disabled>存檔</button>
             </div>
             <div class="mb-3 row p-1">
