--- a/POS/Areas/Setting/Views/Department_Function/Index.cshtml
+++ b/POS/Areas/Setting/Views/Department_Function/Index.cshtml
@@ -17,7 +17,7 @@
                         <td>@department.ShortName</td>
                         <td>@department.Name</td>
                         <td>
-                            <a href="javascript:void(0)" onclick="getDepartmentId(@department.DepartmentId)">選擇</a>
+                            <a onclick="getDepartmentId(@department.DepartmentId)" asp-route-id="@department.DepartmentId">選擇</a>
                         </td>
                     </tr>
                 }
@@ -26,10 +26,10 @@
     </div>
     <div class="container col-9">
         <div class="d-flex flex-wrap mb-3">
-            <button class="btn btn-secondary border m-1 flex-grow-1 selectFunction" onclick="selectTable('front')" disabled>前台</button>
-            <button class="btn btn-secondary border m-1 flex-grow-1 selectFunction" onclick="selectTable('back')" disabled>後台</button>
-            <button class="btn btn-secondary border m-1 flex-grow-1 selectFunction" onclick="selectTable('analyze')" disabled>分析</button>
-            <button class="btn btn-secondary border m-1 flex-grow-1 selectFunction" onclick="selectTable('fix')" disabled>維修</button>
+            <button class="btn btn-secondary border m-1 flex-grow-1 selectFunction" onclick="selectTable('.front')">前台</button>
+            <button class="btn btn-secondary border m-1 flex-grow-1 selectFunction" onclick="selectTable('.back')">後台</button>
+            <button class="btn btn-secondary border m-1 flex-grow-1 selectFunction" onclick="selectTable('.analyze')">分析</button>
+            <button class="btn btn-secondary border m-1 flex-grow-1 selectFunction" onclick="selectTable('.fix')">維修</button>
         </div>
         <form method="post" asp-action="AddPermission">
             <button class="btn btn-primary border m-1 flex-grow-1" type="submit">存檔</button>
@@ -40,21 +40,68 @@
                         <th>啟動</th>
                     </tr>
                 </thead>
-                <!--前台-->
-                <tbody class="hidden-table" id="front-table" style="">
+                <tbody>
                     @for (int i = 0; i < Model.Department_FunctionList.Count; i++)
                     {
                         var item = Model.Department_FunctionList[i];
-                        if (item.Function.Group != POS.Utility.Enum.FunctionGroup.Admin && item.Department.DepartmentId != 1)
+                        
+                        if (item.Function.Group == POS.Utility.Enum.FunctionGroup.前台)
                         {
-                            <tr>
+                            <tr class="hidden-table front">
                                 <td>
                                     @item.Function.FunctionChineseName
+                                    <input asp-for="@Model.Department_FunctionList[i].DepartmentId" value="@item.DepartmentId" type="hidden" />
+                                    <input asp-for="@Model.Department_FunctionList[i].FunctionId" value="@item.FunctionId" type="hidden" />
                                 </td>
                                 <td>
                                     @Html.CheckBoxFor(u => u.Department_FunctionList[i].IsEnable)
                                 </td>
                             </tr>
+                        }
+                        else if (item.Function.Group == POS.Utility.Enum.FunctionGroup.後台)
+                        {
+                            <tr class="hidden-table back">
+                                <td>
+                                    @item.Function.FunctionChineseName
+                                    <input asp-for="@Model.Department_FunctionList[i].DepartmentId" value="@item.DepartmentId" type="hidden" />
+                                    <input asp-for="@Model.Department_FunctionList[i].FunctionId" value="@item.FunctionId" type="hidden" />
+                                </td>
+                                <td>
+                                    @Html.CheckBoxFor(u => u.Department_FunctionList[i].IsEnable)
+                                </td>
+                            </tr>
+                        }
+                        else if (item.Function.Group == POS.Utility.Enum.FunctionGroup.分析)
+                        {
+                            <tr class="hidden-table analyze">
+                                <td>
+                                    @item.Function.FunctionChineseName
+                                    <input asp-for="@Model.Department_FunctionList[i].DepartmentId" value="@item.DepartmentId" type="hidden" />
+                                    <input asp-for="@Model.Department_FunctionList[i].FunctionId" value="@item.FunctionId" type="hidden" />
+                                </td>
+                                <td>
+                                    @Html.CheckBoxFor(u => u.Department_FunctionList[i].IsEnable)
+                                </td>
+                            </tr>
+                        }
+                        else if (item.Function.Group == POS.Utility.Enum.FunctionGroup.維修)
+                        {
+                            <tr class="hidden-table fix">
+                                <td>
+                                    @item.Function.FunctionChineseName
+                                    <input asp-for="@Model.Department_FunctionList[i].DepartmentId" value="@item.DepartmentId" type="hidden" />
+                                    <input asp-for="@Model.Department_FunctionList[i].FunctionId" value="@item.FunctionId" type="hidden" />
+                                </td>
+                                <td>
+                                    @Html.CheckBoxFor(u => u.Department_FunctionList[i].IsEnable)
+                                </td>
+                            </tr>
+                        }
+                        else
+                        {
+                            <input asp-for="@Model.Department_FunctionList[i].Department" value="@item.Department" type="hidden" />
+                            <input asp-for="@Model.Department_FunctionList[i].FunctionId" value="@item.FunctionId" type="hidden" />
+                            <input asp-for="@Model.Department_FunctionList[i].IsEnable" value="false" type="hidden" />
                         }
                     }
                 </tbody>
