--- a/POS/Areas/Setting/Views/Company/Index.cshtml
+++ b/POS/Areas/Setting/Views/Company/Index.cshtml
@@ -1,19 +1,16 @@
 ﻿@model Company
 
-<form method="post">
-    <input asp-for="CompanyId" class="form-control" value="@Model.CompanyId" type="hidden"/>
+<form method="post" asp-action="Upsert">
+    <input asp-for="CompanyId" class="form-control" value="@Model.CompanyId" type="hidden" />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary">總公司 - 基本資料</h2>
             <hr />
         </div>
-        <div class="row">
-            <div class="col-6 col-md-3">
-                <a id="switchButton" class="btn btn-secondary border form-control">修改</a>
-            </div>
-            <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control">存檔</button>
-            </div>         
+        <div class="d-flex flex-wrap mb-3">
+            <button type="button" class="btn btn-secondary border m-1 flex-grow-1" id="upsertButton" onclick="upsert()">@(Model.CompanyId == 0 ? "新增" : "修改")</button>
+            <button type="button" class="btn btn-secondary border m-1 flex-grow-1" id="cancelButton" onclick="cancel()" disabled>取消</button>
+            <button type="submit" class="btn btn-primary border m-1 flex-grow-1" id="submitButton" disabled>存檔</button>
         </div>
         <div class="mb-3 row p-1">
             <label asp-for="Name" class="p-0"></label>
@@ -27,7 +24,7 @@
         </div>
         <div class="mb-3 row p-1">
             <label asp-for="Fax" class="p-0"></label>
-            <input asp-for="Fax" class="form-control" disabled >
+            <input asp-for="Fax" class="form-control" disabled>
             <span asp-validation-for="Fax" class="text-danger"></span>
         </div>
         <div class="mb-3 row p-1">
@@ -50,7 +47,7 @@
             <input asp-for="TaxAddress" class="form-control" disabled />
             <span asp-validation-for="TaxAddress" class="text-danger"></span>
         </div>
-        
+
     </div>
 </form>
 
