--- a/POS/Areas/Setting/Views/Employee/Index.cshtml
+++ b/POS/Areas/Setting/Views/Employee/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Employee
 
 <div class="container">
-    <form method="post" id="stockForm" asp-action="Index" enctype="multipart/form-data">
-        <input asp-for="EmployeeId" class="form-control" value="@Model.EmployeeId" type="hidden" id="ModelId" />
+    <form method="post" id="employeeForm" asp-action="Index" enctype="multipart/form-data">
+        <input asp-for="EmployeeId" class="form-control" value="@Model.EmployeeId" type="hidden" id="InputId" />
         <div class="border p-3 mt-4">
             <div class="row pb-2">
                 <h2 class="text-primary">員工基本資料</h2>
@@ -10,8 +10,8 @@
             </div>
             <div class="d-flex flex-wrap mb-3">
                 <button type="button" id="createButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="add()">新增</button>
-                <button type="button" id="editButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="edit()" @(Model.Stock.StockId == 0 ? "disabled" : "")>修改</button>
-                <button id="deleteButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="deleteClick(@Model.Stock.StockId)" @(Model.Stock.StockId == 0 ? "disabled" : "")>刪除</button>
+                <button type="button" id="editButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="edit()" disabled>修改</button>
+                <button id="deleteButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="deleteClick(@Model.EmployeeId)" disabled>刪除</button>
                 <button type="button" id="cancelButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="cancel()" disabled>取消</button>
                 <button type="button" id="searchButton" class="btn btn-secondary border m-1 flex-grow-1">查詢</button>
                 <button type="button" id="printButton" class="btn btn-secondary border m-1 flex-grow-1">列印</button>
@@ -26,7 +26,7 @@
                     </div>
                     <div class="mb-3 row p-1">
                         <div class="col d-flex align-items-center">
-                            <input asp-for="IsMarried" class="form-check-input" disabled/>
+                            <input asp-for="IsMarried" type="checkbox" class="form-check-input" disabled />
                             <label asp-for="IsMarried" class="p-0 m-0"></label>
                             <span asp-validation-for="IsMarried" class="text-danger"></span>
                         </div>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="mb-3 row p-1">
                         <label asp-for="StartDate" class="p-0"></label>
-                        <input asp-for="StartDate" class="form-control" type="date" disabled />
+                        <input asp-for="StartDate" class="form-control" type="date" value="" disabled />
                         <span asp-validation-for="StartDate" class="text-danger"></span>
                     </div>
                     <div class="mb-3 row p-1">
@@ -118,14 +118,10 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    @if (Model.Photo == null)
+                    @if (Model.Photo != null)
                     {
-
-                    }
-                    else
-                    {
-                        <img src="@Model.Photo" class="mt-4" width="100%" style="border-radius:5px; border:1px solid #bbb9b9"/>
-                    }
+                        <img src="@Model.Photo" class="mt-4 mb-3" width="100%" style="border-radius:5px; border:1px solid #bbb9b9" />
+                    }                        
                     <input asp-for="Photo" class="form-control" type="file" name="file" disabled/>
                     <span asp-validation-for="Photo" class="text-danger"></span>
                 </div>
