--- a/POS/Areas/Setting/Views/Stock/Index.cshtml
+++ b/POS/Areas/Setting/Views/Stock/Index.cshtml
@@ -1,21 +1,21 @@
 ﻿@model StockViewModel
 
 <div class="container">
-    <form method="post" id="stockForm" asp-action="Index">
-        <input asp-for="Stock.StockId" class="form-control" value="@Model.Stock.StockId" type="hidden" id="InputId"/>
+    <form method="post" asp-action="Index">
+        <input asp-for="Stock.StockId" class="form-control" value="@Model.Stock.StockId" type="hidden" id="inputId"/>
         <div class="border p-3 mt-4">
             <div class="row pb-2">
                 <h2 class="text-primary">各倉庫 - 基本資料</h2>
                 <hr />
             </div>
             <div class="d-flex flex-wrap mb-3">
-                <button type="button" id="createButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="add()">新增</button>
-                <button type="button" id="editButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="edit()" @(Model.Stock.StockId == 0 ? "disabled" : "")>修改</button>
-                <button id="deleteButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="deleteClick(@Model.Stock.StockId)" @(Model.Stock.StockId == 0 ? "disabled" : "")>刪除</button>
-                <button type="button" id="cancelButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="cancel()" disabled>取消</button>
+                <button type="button" id="createButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="Create()">新增</button>
+                <button type="button" id="editButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="Edit()" disabled>修改</button>
+                <button type="button" id="deleteButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="Delete(@Model.Stock.StockId)" disabled>刪除</button>
+                <button type="button" id="cancelButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="Cancel()" disabled>取消</button>
                 <button type="button" id="searchButton" class="btn btn-secondary border m-1 flex-grow-1">查詢</button>
                 <button type="button" id="printButton" class="btn btn-secondary border m-1 flex-grow-1">列印</button>
-                <button type="submit" class="btn btn-primary m-1 flex-grow-1" id="submitButton" disabled>存檔</button>
+                <button type="submit" id="submitButton"  class="btn btn-primary m-1 flex-grow-1" disabled>存檔</button>
             </div>
             <div class="mb-3 row p-1">
                 <label asp-for="Stock.Name" class="p-0"></label>
@@ -24,14 +24,14 @@
             </div>
             <div class="mb-3 row p-1">
                 <div class="col d-flex align-items-center">
-                    <input asp-for="Stock.IsShowFront" type="checkbox" class="form-check-input" disabled/>
+                    @Html.CheckBoxFor(model => model.Stock.IsShowFront, new {@class = "form-check-input", @disabled = true})
                     <label asp-for="Stock.IsShowFront" class="p-0 m-0"></label>
                     <span asp-validation-for="Stock.IsShowFront" class="text-danger"></span>
                 </div>
             </div>
             <div class="mb-3 row p-1">
                 <div class="col d-flex align-items-center">
-                    <input asp-for="Stock.IsShowHeadquarters" type="checkbox" class="form-check-input" disabled/>
+                    @Html.CheckBoxFor(model => model.Stock.IsShowHeadquarters, new { @class = "form-check-input", @disabled = true })
                     <label asp-for="Stock.IsShowHeadquarters" class="p-0"></label>
                     <span asp-validation-for="Stock.IsShowHeadquarters" class="text-danger"></span>
                 </div>
@@ -54,20 +54,12 @@
             <div class="mb-3 row p-1">
                 <label asp-for="Stock.Group" class="p-0"></label>
                 <select asp-for="Stock.Group" asp-items="@Html.GetEnumSelectList<POS.Utility.Enum.StockGroup>();" disabled>
-                    @if (Model.Stock.Group == null)
-                    {
-                        <option selected disabled>請選擇群組</option>
-                    }
                 </select>
                 <span asp-validation-for="Stock.Group" class="text-danger"></span>
             </div>
             <div class="mb-3 row p-1">
                 <label asp-for="Stock.ShopId" class="p-0"></label>
                 <select asp-for="Stock.ShopId" asp-items="@Model.ShopList" disabled>
-                    @if (Model.Stock.ShopId == null)
-                    {
-                        <option selected disabled>請選擇店點</option>
-                    }
                 </select>
                 <span asp-validation-for="Stock.ShopId" class="text-danger"></span>
             </div>
