--- a/POS/Areas/Setting/Views/Employee/Index.cshtml
+++ b/POS/Areas/Setting/Views/Employee/Index.cshtml
@@ -2,17 +2,18 @@
 
 <div class="container">
     <form method="post" id="employeeForm" asp-action="Index" enctype="multipart/form-data">
-        <input asp-for="EmployeeId" class="form-control" value="@Model.EmployeeId" type="hidden" id="InputId" />
+        <input asp-for="EmployeeId" class="form-control" value="@Model.EmployeeId" type="hidden" id="inputId" />
+        <input asp-for="Photo" class="form-control" value="@Model.Photo" type="hidden" />
         <div class="border p-3 mt-4">
             <div class="row pb-2">
                 <h2 class="text-primary">員工基本資料</h2>
                 <hr />
             </div>
             <div class="d-flex flex-wrap mb-3">
-                <button type="button" id="createButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="add()">新增</button>
-                <button type="button" id="editButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="edit()" disabled>修改</button>
-                <button id="deleteButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="deleteClick(@Model.EmployeeId)" disabled>刪除</button>
-                <button type="button" id="cancelButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="cancel()" disabled>取消</button>
+                <button type="button" id="createButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="Create()">新增</button>
+                <button type="button" id="editButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="Edit()" disabled>修改</button>
+                <button type="button" id="deleteButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="Delete(@Model.EmployeeId)" disabled>刪除</button>
+                <button type="button" id="cancelButton" class="btn btn-secondary border m-1 flex-grow-1" onclick="Cancel()" disabled>取消</button>
                 <button type="button" id="searchButton" class="btn btn-secondary border m-1 flex-grow-1">查詢</button>
                 <button type="button" id="printButton" class="btn btn-secondary border m-1 flex-grow-1">列印</button>
                 <button type="submit" class="btn btn-primary m-1 flex-grow-1" id="submitButton" disabled>存檔</button>
@@ -78,7 +79,10 @@
                     </div>
                     <div class="mb-3 row p-1">
                         <label asp-for="Gender" class="p-0"></label>
-                        <select asp-for="Gender" asp-items="@Html.GetEnumSelectList<POS.Utility.Enum.Gender>();" disabled>
+                        @{
+                            var genderList = Html.GetEnumSelectList<POS.Utility.Enum.Gender>();
+                        }
+                        <select asp-for="Gender" asp-items="@genderList" disabled>
                             @if (Model.Gender == null)
                             {
                                 <option selected disabled>請選擇性別</option>
@@ -93,7 +97,7 @@
                     </div>
                     <div class="mb-3 row p-1">
                         <label asp-for="StartDate" class="p-0"></label>
-                        <input asp-for="StartDate" class="form-control" type="date" value="" disabled />
+                        <input asp-for="StartDate" class="form-control" type="date" value="@(Model.EmployeeId == 0 ? "" : Model.StartDate.ToString("yyyy-MM-dd"))" disabled />
                         <span asp-validation-for="StartDate" class="text-danger"></span>
                     </div>
                     <div class="mb-3 row p-1">
