--- a/POS/Views/Shared/_Layout.cshtml
+++ b/POS/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                                 <li><a class="dropdown-item" asp-area="Setting" asp-controller="Department_Function" asp-action="Index">部門權限設定</a></li>
                                 <li><a class="dropdown-item" asp-area="Setting" asp-controller="Role" asp-action="Index">群組權限設定</a></li>
                                 <li><a class="dropdown-item" asp-area="Setting" asp-controller="Employee" asp-action="Index">員工資本資料</a></li>
+                                <li><a class="dropdown-item" asp-area="Setting" asp-controller="EmployeeLogin" asp-action="Index">員工登入資料</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
